Fix | scrollbar width

--- a/front/static/scrool.css
+++ b/front/static/scrool.css
@@ -1,5 +1,5 @@
 :root{
-    --scrollbar-width: 12px;
+    --scrollbar-width: 5px;
 }
 
 /* WebKit (Chromium, Chrome, Opera, Safari) */
